==> knielsen/stm32f4_wireless_bootloader/wireless_bootloader.c <==
#include <string.h>
#include <stm32f4xx.h>
#include "dbg.h"
#include "led.h"
#include "nrf24l01p.h"
#define POV_CMD_DEBUG 254
#define POV_SUBCMD_RESET_TO_BOOTLOADER 255
#define POV_SUBCMD_ENTER_BOOTLOADER 254
#define POV_SUBCMD_RESET_TO_APP 253
#define POV_SUBCMD_FLASH_BUFFER 252
#define POV_SUBCMD_EXIT_DEBUG   251
#define POV_SUBCMD_STATUS_REPLY 240
#define MCU_HZ 180000000

static inline void
csn_low(void)
{
  GPIO_ResetBits(GPIOC, GPIO_Pin_1);
}

static inline void
csn_high(void)
{
  GPIO_SetBits(GPIOC, GPIO_Pin_1);
}

static inline void
ce_low(void)
{
  GPIO_ResetBits(GPIOC, GPIO_Pin_2);
}

static inline void
ce_high(void)
{
  GPIO_SetBits(GPIOC, GPIO_Pin_2);
}

static void
ssi_cmd(uint8_t *recvbuf, const uint8_t *sendbuf, uint32_t len)
{
  uint32_t i;

  /* Take CSN low to initiate transfer. */
  csn_low();

  /*
    Do the transfer, writing bytes and reading the returned bytes.
    Note that nRF SPI uses most-significant-bit first, while USART works
    with least-significant-bit first. So we need to bit-swap all the
    bytes sent and received.
  */
  for (i = 0; i < len; ++i)
  {
    while (!USART_GetFlagStatus(USART1, USART_FLAG_TXE))
      ;
    USART_SendData(USART1, bitswap_byte(sendbuf[i]));
    while (!USART_GetFlagStatus(USART1, USART_FLAG_RXNE))
      ;
    recvbuf[i] = bitswap_byte(USART_ReceiveData(USART1));
  }

  /* Take CSN high to complete transfer. */
  csn_high();
}

static void
setup_systick(void)
{
  SysTick->LOAD = 0xffffff;
  SysTick->VAL = 0;
  SysTick->CTRL = SysTick_CTRL_CLKSOURCE_Msk | SysTick_CTRL_ENABLE_Msk;
}

static inline uint32_t
get_time(void)
{
  return SysTick->VAL;
}

static void
jump_to_target(uint32_t target_start)
{
  USART_ClockInitTypeDef USART_ClockInitStruct;
  uint32_t stack = ((uint32_t *)target_start)[0];
  uint32_t start = ((uint32_t *)target_start)[1];

  flush_sector_data();

  /* De-initialise the nRF24L01+, powering it down. */
  nrf_write_reg(nRF_CONFIG, nRF_PRIM_RX | nRF_MASK_RX_DR | nRF_MASK_TX_DS |
                nRF_MASK_MAX_RT|nRF_EN_CRC|nRF_CRCO);
  csn_high();
  ce_low();

  /*
    De-initialise the stuff we used, to make application run in an
    environment more closely resembling clean reset.
  */
  USART_Cmd(USART1, DISABLE);
  USART_ClockInitStruct.USART_Clock = USART_Clock_Disable;
  USART_ClockInitStruct.USART_CPOL = USART_CPOL_Low;
  USART_ClockInitStruct.USART_CPHA = USART_CPHA_1Edge;
  USART_ClockInitStruct.USART_LastBit = USART_LastBit_Enable;
  USART_ClockInit(USART1, &USART_ClockInitStruct);
  USART_DeInit(USART1);
  GPIO_DeInit(GPIOA);
  GPIO_DeInit(GPIOC);
  SysTick->CTRL = SysTick_CTRL_CLKSOURCE_Msk;

  serial_puts("Boot to target\r\n\r\n");
  USART_Cmd(USART3, DISABLE);
  USART_DeInit(USART3);
  GPIO_DeInit(GPIOB);
  delay(MCU_HZ/(3*50));

  SCB->VTOR = target_start;
  __asm__ __volatile__
    ("mov  sp, %0\n\t"
     "bx   %1\n"
     :
     : "r" (stack), "r" (start)
     );
}
