==> knielsen/tiva_wireless_bootloader/wireless_bootloader.c <==
#include <inttypes.h>
#include <string.h>
#include "inc/hw_gpio.h"
#include "inc/hw_memmap.h"
#include "inc/hw_sysctl.h"
#include "inc/hw_types.h"
#include "inc/hw_ints.h"
#include "inc/hw_nvic.h"
#include "inc/hw_ssi.h"
#include "inc/hw_uart.h"
#include "inc/hw_timer.h"
#include "driverlib/gpio.h"
#include "driverlib/rom.h"
#include "driverlib/sysctl.h"
#include "driverlib/sysctl.h"
#include "driverlib/uart.h"
#include "driverlib/timer.h"
#include "driverlib/ssi.h"
#include "driverlib/systick.h"
#include "driverlib/flash.h"
#include "nrf24l01p.h"
#define NRF_SSI_PERIPH SYSCTL_PERIPH_SSI1
#define NRF_SSI_GPIO_PERIPH SYSCTL_PERIPH_GPIOF
#define NRF_SSI_BASE SSI1_BASE
#define NRF_CSN_PERIPH SYSCTL_PERIPH_GPIOF
#define NRF_CSN_BASE GPIO_PORTF_BASE
#define NRF_CSN_PIN GPIO_PIN_3
#define NRF_CE_PERIPH SYSCTL_PERIPH_GPIOB
#define NRF_CE_BASE GPIO_PORTB_BASE
#define NRF_CE_PIN GPIO_PIN_3
#define NRF_IRQ_PERIPH SYSCTL_PERIPH_GPIOB
#define NRF_IRQ_BASE GPIO_PORTB_BASE
#define NRF_IRQ_PIN GPIO_PIN_0
#define POV_CMD_DEBUG 254
#define POV_SUBCMD_RESET_TO_BOOTLOADER 255
#define POV_SUBCMD_ENTER_BOOTLOADER 254
#define POV_SUBCMD_RESET_TO_APP 253
#define POV_SUBCMD_FLASH_BUFFER 252
#define POV_SUBCMD_EXIT_DEBUG   251
#define POV_SUBCMD_STATUS_REPLY 240
#define MCU_HZ 80000000

static inline void
csn_low(uint32_t csn_base, uint32_t csn_pin)
{
  ROM_GPIOPinWrite(csn_base, csn_pin, 0);
}

static inline void
csn_high(uint32_t csn_base, uint32_t csn_pin)
{
  ROM_GPIOPinWrite(csn_base, csn_pin, csn_pin);
}

static inline void
ce_low(uint32_t ce_base, uint32_t ce_pin)
{
  ROM_GPIOPinWrite(ce_base, ce_pin, 0);
}

static inline void
ce_high(uint32_t ce_base, uint32_t ce_pin)
{
  ROM_GPIOPinWrite(ce_base, ce_pin, ce_pin);
}

static void
ssi_cmd(uint8_t *recvbuf, const uint8_t *sendbuf, uint32_t len,
        uint32_t ssi_base, uint32_t csn_base, uint32_t csn_pin)
{
  uint32_t i;
  uint32_t data;

  /* Take CSN low to initiate transfer. */
  csn_low(csn_base, csn_pin);

  for (i = 0; i < len; ++i)
  {
    ROM_SSIDataPut(ssi_base, sendbuf[i]);
    while (ROM_SSIBusy(ssi_base))
      ;
    ROM_SSIDataGet(ssi_base, &data);
    recvbuf[i] = data;
  }

  /* Take CSN high to complete transfer. */
  csn_high(csn_base, csn_pin);
}

static void
setup_systick(void)
{
  ROM_SysTickPeriodSet(0xffffff+1);
  /* Force reload. */
  HWREG(NVIC_ST_CURRENT) = 0;
  ROM_SysTickEnable();
}

static inline uint32_t
get_time(void)
{
  return HWREG(NVIC_ST_CURRENT);
}

static void
jump_to_target(uint32_t target_start)
{
  uint32_t stack = ((uint32_t *)target_start)[0];
  uint32_t start = ((uint32_t *)target_start)[1];

  /* De-initialise the nRF24L01+, powering it down. */
  nrf_write_reg(nRF_CONFIG, nRF_PRIM_RX | nRF_MASK_RX_DR | nRF_MASK_TX_DS |
                nRF_MASK_MAX_RT|nRF_EN_CRC|nRF_CRCO,
                NRF_SSI_BASE, NRF_CSN_BASE, NRF_CSN_PIN);
  csn_high(NRF_CSN_BASE, NRF_CSN_PIN);
  ce_low(NRF_CE_BASE, NRF_CE_PIN);

  /* ToDo: maybe de-initialise some stuff:
      - systicks
      - system clock
      - GPIOs B and F
      - SSI
  */

  serial_output_str("Boot to target\r\n");

  HWREG(NVIC_VTABLE) = target_start;
  __asm__ __volatile__
    ("mov  sp, %0\n\t"
     "bx   %1\n"
     :
     : "r" (stack), "r" (start)
     );
}
